# api-ws-demo

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  render.yaml
.claude/skills/regenerate-compressed-assets/: SKILL.md
.github/workflows/: docker-publish.yml
assets/: compressed_sample.json  compressed_sample.json.zst  compressed_sample.msgpack  compressed_sample.msgpack.zst
src/: compressed_assets.rs  compressed_http.rs  cpu.rs  main.rs  mock.rs  ratelimit.rs  response.rs  rest.rs  routes.rs  state.rs  stats.rs  ws.rs
src/auth/: extractor.rs  handlers.rs  jwt.rs  mod.rs  password.rs  refresh.rs  user_store.rs
src/stomp/: broker.rs  connection.rs  frame.rs  mod.rs
