[package]
name = "api-ws-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3", features = ["sink"] }
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
tower_governor = { version = "0.5", features = ["axum"] }
governor = "0.8"
